Image File Added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <title>Profile Card</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="./Profile_icon.png" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <h1>Hello World!</h1>
 
+    <div class="container">
+        <div class="image-section">
+            <img src="./image.png" alt="Profile_Image">
+        </div>
+
+        <div class="text-content">
+            <span>Thilocigan</span>
+            <span>Web Designer</span>
+            <p>An Aspiring and Enthusiatic Front-end Developer With Aesthetic UI And UX Components.</p>
+            <button class="btn">Read More</button>
+            <div class="social-media">
+                <i class='bx bxl-instagram-alt'></i>
+                <i class='bx bxl-github'></i>
+                <i class='bx bxl-linkedin'></i>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
