Updated HTML File

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <p>An Aspiring and Enthusiatic Front-end Developer With Aesthetic UI And UX Components.</p>
             <button class="btn">Read More</button>
             <div class="social-media">
-                <i class='bx bxl-instagram-alt'></i>
-                <i class='bx bxl-github'></i>
-                <i class='bx bxl-linkedin'></i>
+               <a href="https://www.instagram.com/_._terrific_toxic_._/profilecard/?igsh=MTZjOWFwYzZiaTBzYQ=="><i class='bx bxl-instagram-alt'></i></a> 
+                <a href="https://github.com/Thilocigan"><i class='bx bxl-github'></i></a> 
+                <a href="https://www.linkedin.com/in/thilo-cigan-9a517228a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class='bx bxl-linkedin'></i></a> 
             </div>
         </div>
     </div>
